--- a/Meteora/index.html
+++ b/Meteora/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meteora</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -207,7 +209,7 @@
     </div>
 
     <!-- Products -->
-    <h2 class="text-center">Produtos que estão bombando:</h2>
+    <h2 class="text-center">Produtos que estão bombando!</h2>
     <div class="container row mx-auto g-4">
 
         <div class="col-12 col-md-6 col-xxl-4">
@@ -330,6 +332,53 @@
             </div>
         </div>
     </div>
+
+    <!-- Facilities -->
+    <section class="pb-4">
+        <h2 class="text-center">Conheça todas as nossas facilidades</h2>
+        <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center gap-3 px-3">
+            <div class="divs-facilidades d-flex d-flex align-items-center">
+                <div><i class="bi bi-x-diamond fs-1"></i></div>
+                <div>
+                    <div class="ms-3 mb-1">PAGUE PELO PIX</div>
+                    <div class="texto-menor ms-3">Ganhe 5% OFF em
+                        pagamentos via PIX</div>
+                </div>
+            </div>
+
+            <div class="divs-facilidades d-flex d-flex align-items-center">
+                <div><i class="bi bi-arrow-repeat fs-1"></i></div>
+                <div>
+                    <div class="ms-3 mb-1">TROCA GRÁTIS</div>
+                    <div class="texto-menor ms-3">Fique livre para trocar em até 30 dias.</div>
+                </div>
+            </div>
+
+            <div class="divs-facilidades d-flex d-flex align-items-center">
+                <div><i class="bi bi-flower1 fs-1"></i></div>
+                <div>
+                    <div class="ms-3 mb-1">SUSTENTABILIDADE</div>
+                    <div class="texto-menor ms-3">Moda responsável, que respeita o meio ambiente.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Forms -->
+    <form class="border border-secondary m-3 p-3 text-center div-novidades mx-auto">
+        <h5>Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h5>
+        <div class="input-group my-3">
+            <input type="email" class="form-control border-secondary rounded-0" placeholder="Digite seu e-mail"
+                aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
+            <button type="button" id="button-addon2">Enviar</button>
+        </div>
+    </form>
+
+    <!-- Footer -->
+    <footer class="text-center">
+        <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins
+            comerciais.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
