--- a/Meteora/index.html
+++ b/Meteora/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -41,7 +41,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2 rounded-0 cor-produto" type="search" placeholder="Digite o produto"
-                        aria-label="Search">
+                        aria-label="Pesquisar">
                     <button class="btn btn-outline-light rounded-0" type="submit">Buscar</button>
                 </form>
             </div>
@@ -75,8 +75,8 @@
                 <img class="img-fluid d-none d-md-none d-xl-block w-100" src="./assets/Desktop/banner2-desktop.png"
                     alt="Modelo feminina utilizando óculos escuros, moletom grafite e tênis rosa fluorescente, em fundo rosa.">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>COLEÇÃO ATEMPORAL</h5>
-                    <p>Estilo e qualidade para durar.</p>
+                    <p class="carousel-title">COLEÇÃO ATEMPORAL</p>
+                    <h5>Estilo e qualidade para durar.</h5>
                 </div>
             </div>
             <div class="carousel-item">
@@ -87,20 +87,20 @@
                 <img class="img-fluid d-none d-md-none d-xl-block w-100" src="./assets/Desktop/banner3-desktop.png"
                     alt="Modelo masculino utilizando óculos de grau, chapéu e roupa social, em fundo laranja.">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>COLEÇÃO ATEMPORAL</h5>
-                    <p>Alto impacto visual, baixo impacto ambiental!</p>
+                    <p class="carousel-title">COLEÇÃO ATEMPORAL</p>
+                    <h5>Alto impacto visual, baixo impacto ambiental!</h5>
                 </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span class="visually-hidden">Anterior</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span class="visually-hidden">Proximo</span>
         </button>
     </div>
 
@@ -205,136 +205,119 @@
     <h2 class="container text-center my-3 my-xl-5">Produtos que estão bombando!</h2>
     <div class="container row mx-auto g-4">
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                        dy=".3em">Image cap</text>
-                </svg>
+                <img class="d-md-none d-block" src="./assets/Mobile/produtos/camiseta.png"
+                    alt="Modelo do sexo masculino utilizando camiseta marrom em fundo branco.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/camiseta.png""
+                    alt=" Modelo do sexo masculino utilizando camiseta marrom em fundo branco.">
+                <img class="d-none d-md-none d-xl-block" src="./assets/Desktop/produtos/camiseta.png""
+                    alt=" Modelo do sexo masculino utilizando camiseta marrom em fundo branco.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
-                    <p>R$30,00</p>
-                    <a href="#" class="btn btn-primary cor-produtos rounded-0 border-0">Ver mais</a>
+                    <h5 class="card-title">Camiseta Conforto</h5>
+                    <p class="card-text">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão.
+                        Modelagem unissex.</p>
+                    <h6>R$70,00</h6>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                        dy=".3em">Image cap</text>
-                </svg>
+                <img class="d-md-none d-block" src="./assets/Mobile/produtos/calca.png"
+                    alt="Modelo do sexo feminino utilizando calca bege.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/calca.png""
+                    alt="Modelo do sexo feminino utilizando calca bege.">
+                <img class="d-none d-md-none d-xl-block" src="./assets/Desktop/produtos/calca.png""
+                    alt="Modelo do sexo feminino utilizando calca bege.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
-                    <p>R$30,00</p>
-                    <a href="#" class="btn btn-primary rounded-0 cor-produtos">Ver mais</a>
+                    <h5 class="card-title">Calça Alfaiataria</h5>
+                    <p class="card-text">Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!</p>
+                    <h6>R$ 180,00</h6>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                        dy=".3em">Image cap</text>
-                </svg>
+                <img class="d-md-none d-block" src="./assets/Mobile/produtos/tenis.png"
+                    alt="Tenis branco com cadarco branco.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/tenis.png""
+                    alt="Tenis branco com cadarco branco.">
+                <img class="d-none d-md-none d-xl-block" src="./assets/Desktop/produtos/tenis.png""
+                    alt="Tenis branco com cadarco branco.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
-                    <p>R$30,00</p>
-                    <a href="#" class="btn btn-primary rounded-0 cor-produtos">Ver mais</a>
+                    <h5 class="card-title">Tênis Chunky</h5>
+                    <p class="card-text">Snicker casual com solado mais alto e modelagem robusta. Modelo unissex.</p>
+                    <h6>R$ 250,00</h6>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                        dy=".3em">Image cap</text>
-                </svg>
+                <img class="d-md-none d-block" src="./assets/Mobile/produtos/jaqueta-jeans.png"
+                    alt="Modelo do sexo masculino utilizando jaqueta jeans em fundo branco.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/jaqueta-jeans.png""
+                    alt="Modelo do sexo masculino utilizando jaqueta jeans em fundo branco.">
+                <img class="d-none d-md-none d-xl-block" src="./assets/Desktop/produtos/jaqueta-jeans.png""
+                    alt="Modelo do sexo masculino utilizando jaqueta jeans em fundo branco.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
-                    <p>R$30,00</p>
-                    <a href="#" class="btn btn-primary rounded-0 cor-produtos">Ver mais</a>
+                    <h5 class="card-title">Jaqueta Jeans</h5>
+                    <p class="card-text">Modelo unissex oversized com gola de camurça. Atemporal e autêntica!</p>
+                    <h6>R$ 150,00</h6>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                        dy=".3em">Image cap</text>
-                </svg>
+                <img class="d-md-none d-block" src="./assets/Mobile/produtos/oculos.png"
+                    alt="Modelo do sexo masculino utilizando oculos em fundo branco.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/oculos.png""
+                    alt="Modelo do sexo masculino utilizando oculos em fundo branco.">
+                <img class="d-none d-md-none d-xl-block" src="./assets/Desktop/produtos/oculos.png""
+                    alt="Modelo do sexo masculino utilizando oculos em fundo branco.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
-                    <p>R$30,00</p>
-                    <a href="#" class="btn btn-primary rounded-0 cor-produtos">Ver mais</a>
+                    <h5 class="card-title">Óculos Redondo</h5>
+                    <p class="card-text">Armação metálica em grafite com lentes arredondadas. Sem erro!</p>
+                    <h6>R$ 120,00</h6>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xxl-4">
+        <div class="col-12 col-md-6 col-xxl-4 pb-4">
             <div class="card">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-                        dy=".3em">Image cap</text>
-                </svg>
+                <img class="d-md-none d-block" src="./assets/Mobile/produtos/bolsa.png"
+                    alt="Modelo segurando bolsa em ambiente urbano.">
+                <img class="d-none d-md-block d-xl-none" src="./assets/Tablet/produtos/bolsa.png""
+                    alt="Modelo segurando bolsa em ambiente urbano.">
+                <img class="d-none d-md-none d-xl-block" src="./assets/Desktop/produtos/bolsa.png""
+                    alt="Modelo segurando bolsa em ambiente urbano.">
                 <div class="card-body">
-                    <h5 class="card-title">Produto</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                        of the
-                        card's content.</p>
-                    <p>R$30,00</p>
-                    <a href="#" class="btn btn-primary rounded-0 cor-produtos">Ver mais</a>
+                    <h5 class="card-title">Bolsa coringa</h5>
+                    <p class="card-text">Bolsa camel em couro sintético de alta duração. Ideal para acompanhar você por uma vida!</p>
+                    <h6>R$ 120,00</h6>
+                    <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Facilities -->
-    <section class="pb-4 bg-black my-3 my-xl-5">
-        <h2 class="text-center text-light">Conheça todas as nossas facilidades</h2>
+    <section class="pb-4 bg-black text-bg-dark">
+        <h2 class="text-center py-3">Conheça todas as nossas facilidades</h2>
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center gap-3 px-3">
             <div class="divs-facilidades d-flex d-flex align-items-center">
                 <div><i class="bi bi-x-diamond fs-1 cor-facilidades"></i></div>
                 <div>
                     <div class="ms-3 mb-1 cor-facilidades">PAGUE PELO PIX</div>
-                    <div class="texto-menor ms-3 text-light">Ganhe 5% OFF em
+                    <div class="texto-menor ms-3">Ganhe 5% OFF em
                         pagamentos via PIX</div>
                 </div>
             </div>
@@ -343,7 +326,7 @@
                 <div><i class="bi bi-arrow-repeat fs-1 cor-facilidades"></i></div>
                 <div>
                     <div class="ms-3 mb-1 cor-facilidades">TROCA GRÁTIS</div>
-                    <div class="texto-menor ms-3 text-light">Fique livre para trocar em até 30 dias.</div>
+                    <div class="texto-menor ms-3">Fique livre para trocar em até 30 dias.</div>
                 </div>
             </div>
 
@@ -351,7 +334,7 @@
                 <div><i class="bi bi-flower1 fs-1 cor-facilidades"></i></div>
                 <div>
                     <div class="ms-3 mb-1 cor-facilidades">SUSTENTABILIDADE</div>
-                    <div class="texto-menor ms-3 text-light">Moda responsável, que respeita o meio ambiente.</div>
+                    <div class="texto-menor ms-3">Moda responsável, que respeita o meio ambiente.</div>
                 </div>
             </div>
         </div>
@@ -361,15 +344,15 @@
     <form class="border border-secondary my-3 my-xl-5 p-3 text-center div-novidades mx-auto">
         <h5>Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h5>
         <div class="input-group my-3">
-            <input type="email" class="form-control border-secondary rounded-0 cor-produto" placeholder="Digite seu e-mail"
-                aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
+            <input type="email" class="form-control border-secondary rounded-0 cor-produto"
+                placeholder="Digite seu e-mail" aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
             <button type="button" id="button-addon2">Enviar</button>
         </div>
     </form>
 
     <!-- Footer -->
     <footer class="text-center bg-black text-light">
-        <p class="py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins
+        <p class="card-text py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por мне | Projeto fictício sem fins
             comerciais.</p>
     </footer>
 
